--- a/.gitmodules
+++ b/.gitmodules
@@ -13,6 +13,11 @@
 	url = https://github.com/rformassspectrometry/MsBackendMgf
 	shallow = true
 	registered = true
+[submodule "RforMassSpectrometry"]
+	path = RforMassSpectrometry
+	url = https://github.com/rformassspectrometry/RforMassSpectrometry
+	shallow = true
+	registered = true
 [submodule "MsFeatures"]
 	path = MsFeatures
 	url = https://github.com/rformassspectrometry/MsFeatures
