--- a/.gitmodules
+++ b/.gitmodules
@@ -3,34 +3,14 @@
 	url = https://github.com/rformassspectrometry/universe
 	shallow = true
 	branch = HEAD
-[submodule "Spectra"]
-	path = Spectra
-	url = https://github.com/rformassspectrometry/Spectra
+[submodule "CompoundDb"]
+	path = CompoundDb
+	url = https://github.com/rformassspectrometry/CompoundDb
 	shallow = true
 	registered = true
-[submodule "MsBackendMgf"]
-	path = MsBackendMgf
-	url = https://github.com/rformassspectrometry/MsBackendMgf
-	shallow = true
-	registered = true
-[submodule "RforMassSpectrometry"]
-	path = RforMassSpectrometry
-	url = https://github.com/rformassspectrometry/RforMassSpectrometry
-	shallow = true
-	registered = true
-[submodule "MsFeatures"]
-	path = MsFeatures
-	url = https://github.com/rformassspectrometry/MsFeatures
-	shallow = true
-	registered = true
-[submodule "QFeatures"]
-	path = QFeatures
-	url = https://github.com/rformassspectrometry/QFeatures
-	shallow = true
-	registered = true
-[submodule "MsCoreUtils"]
-	path = MsCoreUtils
-	url = https://github.com/rformassspectrometry/MsCoreUtils
+[submodule "MetaboAnnotation"]
+	path = MetaboAnnotation
+	url = https://github.com/rformassspectrometry/MetaboAnnotation
 	shallow = true
 	registered = true
 [submodule "MetaboCoreUtils"]
@@ -38,14 +18,39 @@
 	url = https://github.com/rformassspectrometry/MetaboCoreUtils
 	shallow = true
 	registered = true
+[submodule "MsBackendMassbank"]
+	path = MsBackendMassbank
+	url = https://github.com/rformassspectrometry/MsBackendMassbank
+	shallow = true
+	registered = true
+[submodule "MsBackendMgf"]
+	path = MsBackendMgf
+	url = https://github.com/rformassspectrometry/MsBackendMgf
+	shallow = true
+	registered = true
+[submodule "MsBackendMsp"]
+	path = MsBackendMsp
+	url = https://github.com/rformassspectrometry/MsBackendMsp
+	shallow = true
+	registered = true
+[submodule "MsCoreUtils"]
+	path = MsCoreUtils
+	url = https://github.com/rformassspectrometry/MsCoreUtils
+	shallow = true
+	registered = true
 [submodule "MsExperiment"]
 	path = MsExperiment
 	url = https://github.com/rformassspectrometry/MsExperiment
 	shallow = true
 	registered = true
-[submodule "MsBackendMassbank"]
-	path = MsBackendMassbank
-	url = https://github.com/rformassspectrometry/MsBackendMassbank
+[submodule "MsFeatures"]
+	path = MsFeatures
+	url = https://github.com/rformassspectrometry/MsFeatures
+	shallow = true
+	registered = true
+[submodule "MsQuantitation"]
+	path = MsQuantitation
+	url = https://github.com/rformassspectrometry/MsQuantitation
 	shallow = true
 	registered = true
 [submodule "ProtGenerics"]
@@ -58,8 +63,33 @@
 	url = https://github.com/rformassspectrometry/PSMatch
 	shallow = true
 	registered = true
+[submodule "QFeatures"]
+	path = QFeatures
+	url = https://github.com/rformassspectrometry/QFeatures
+	shallow = true
+	registered = true
+[submodule "RforMassSpectrometry"]
+	path = RforMassSpectrometry
+	url = https://github.com/rformassspectrometry/RforMassSpectrometry
+	shallow = true
+	registered = true
+[submodule "Spectra"]
+	path = Spectra
+	url = https://github.com/rformassspectrometry/Spectra
+	shallow = true
+	registered = true
+[submodule "SpectraQL"]
+	path = SpectraQL
+	url = https://github.com/rformassspectrometry/SpectraQL
+	shallow = true
+	registered = true
 [submodule "SpectraVis"]
 	path = SpectraVis
 	url = https://github.com/rformassspectrometry/SpectraVis
+	shallow = true
+	registered = true
+[submodule "SpectriPy"]
+	path = SpectriPy
+	url = https://github.com/rformassspectrometry/SpectriPy
 	shallow = true
 	registered = true
