--- a/.gitmodules
+++ b/.gitmodules
@@ -65,3 +65,8 @@
 [submodule "SpectriPy"]
 	path = SpectriPy
 	url = https://github.com/rformassspectrometry/SpectriPy
+[submodule "opentimsr"]
+	path = opentimsr
+	url = https://github.com/michalsta/opentims
+	subdir = opentimsr
+	registered = false
